--- a/stoplight-react/src/index.css
+++ b/stoplight-react/src/index.css
@@ -1,3 +1,29 @@
+/*Version 2*/
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  border: thin black solid;
+  margin: 40px;
+  width: 120px;
+}
+
+.light {
+  margin: 10px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: gray;
+}
+
+
+
+
+/*Version 1*/
+/*
 body {
   margin: 0;
   padding: 0;
@@ -27,8 +53,4 @@ body {
 
 .green {
   background-color: green;
-}
-
-
-
-
+}*/
