--- a/tip-calculator-react/src/App.css
+++ b/tip-calculator-react/src/App.css
@@ -1,4 +1,51 @@
 .App {
+}
+
+
+.calculator  {
+  border: solid 2px black;
+  margin: 40px;
   text-align: center;
 }
 
+.calculator__form {
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  
+}
+
+.calculator__percentage {
+  font-size: 1.5em;
+  margin: 0 200px 0 200px;
+  text-align: center;
+}
+
+.calculator__total  {
+  font-size: 1.5em;
+  margin: 0 200px 0 200px;
+  text-align: center;
+}
+
+.results  {
+  font-size: 1.5em;
+  background-color: lightGray;
+  margin: 30px 200px 30px 200px;
+  padding: 10px 0 10px 0;
+}
+
+.results__heading  {
+  text-align: center;
+
+}
+
+.results__amount  {
+  text-align: left;
+  padding: 0px 20px 0px 150px;
+
+}
+
+span {
+  color: red;
+}
