--- a/stoplight-react/src/index.css
+++ b/stoplight-react/src/index.css
@@ -1,13 +1,21 @@
-/*Version 2*/
-
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .App {
-  border: thin black solid;
-  margin: 40px;
+  background-color: #2b4251;
+  margin: 41px;
+  padding: 15px;
+  width: 160px;
+  border-radius: 30px;
+}
+
+.lights-container {
+  background-color: #fff;
+  margin: 10px;
+  padding: 10px;
   width: 120px;
 }
 
@@ -18,39 +26,3 @@ body {
   border-radius: 50%;
   background-color: gray;
 }
-
-
-
-
-/*Version 1*/
-/*
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.App {
-  border: thin black solid;
-  margin: 40px;
-  width: 120px;
-}
-
-.light {
-  margin: 10px;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: gray;
-}
-
-.red {
-  background-color: red;
-}
-
-.yellow {
-  background-color: yellow;
-}
-
-.green {
-  background-color: green;
-}*/
